replaced getFirst with get(0) for Java 17 change